Finalizing #1639: Updated configuration templates

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -128,6 +128,16 @@ Alias /htdocs/trac ${trac_htdocs}
 </Directory>
 
 # ----------------------------------------------------------------------------------------------------------------------
+# Project icons to be hosted by Apache. Define URL also in [multiproject-projects] icon_url = /htdocs/icons
+# ----------------------------------------------------------------------------------------------------------------------
+Alias /htdocs/icons ${trac_htdocs}/icons
+<Directory ${trac_htdocs}/icons>
+    Options -Indexes FollowSymLinks
+    Order allow,deny
+    Allow from all
+</Directory>
+
+# ----------------------------------------------------------------------------------------------------------------------
 #  Setup logs
 # ----------------------------------------------------------------------------------------------------------------------
 LogLevel warn
