--- a/etc/templates/trac/project.ini
+++ b/etc/templates/trac/project.ini
@@ -555,6 +555,17 @@ project_requires_agreed_terms = true
 # Compared value is sum of *_changes in project_activity table
 min_activity = 0
 
+# Server filesystem folder where the project icons are stored in format: <pid>-<md5hash>.ext
+# If empty, icon is stored into <env>/htdocs/
+icon_dir = /storage/trac/icons
+# URL path where icons can be accessed. Usually configured as alias in webserver to point to ``icon_dir``
+icon_url = /htdocs/icons
+# URL of the default icon if project does not have one. Can be hosted in same server or not.
+icon_default_url = http://www.jetbrains.com/youtrack/tools/img/trac-logo.png
+# Forced project icon size (width x height). Values separated by comma or x-character.
+# Single value means square: 16 => 16x16
+icon_size = 64x64
+
 [multiproject-messages]
 # Connection to Juggernaut service
 # Defaults to current host
