Finalizing #1639: Fixed migration in some environments
- Using StringIO instead of Parser as it seems to work better in many
  environments
- Updated based on peer review comments
- Fixed config template

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -132,7 +132,7 @@ Alias /htdocs/trac ${trac_htdocs}
 # ----------------------------------------------------------------------------------------------------------------------
 Alias /htdocs/icons ${trac_htdocs}/icons
 <Directory ${trac_htdocs}/icons>
-    Options -Indexes FollowSymLinks
+    Options -Indexes +FollowSymLinks
     Order allow,deny
     Allow from all
 </Directory>
