Implemented #1649: Implemented external plugin cache
- Added params 'branch' and 'allext' to the dist.buildext fabric task
- Added param 'ext' to the dist.clean fabric task
- Added param 'extbranch' to the dist.build fabric task, changed
  the handling and the default value of param 'ext'
- Made related documentation changes
- Added functionality to fetch resources inside some configurable folder
- Saves the resource information inside the resource folder
- Made ext/plugin, the default external resource folder, to be ignored path

This change allows speedup by bypassing resource fetching for other than
GitResources, and for GitResources, the git fetch is executed instead of
git clone.

If the resource url is changed, the resource is wiped out and received again.

--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,13 @@ cqde*.tar.gz
 install.tar.gz
 .*.swp
 release/
-TracNokiaTheme-minimized
 
 .subversion
 .idea
 fabfile.ini
+# By default, fabric task dist.buildext
+# uses ext/plugins to store the external plugins downloaded
+ext/plugins
 
 # Tests
 tests/webtests/chromedriver.log
