multiproject-access.conf merged into multiproject.conf (ticket #1562)

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -1,6 +1,23 @@
 # ----------------------------------------------------------------------------------------------------------------------
-# Notice that we match all the requests excepts the ones listed in regexp
+# Set basic settings for SCM and DAV
 # ----------------------------------------------------------------------------------------------------------------------
+<LocationMatch "^/(git|hg|dav|svn)/.+">
+    SetHandler None
+    PythonOption auth_anonymous true
+    Order allow,deny
+    Allow from all
+</LocationMatch>
+
+# SCM
+<LocationMatch "^/(git|hg|svn)/.+">
+    PythonOption realm "MultiProject version control"
+</LocationMatch>
+
+# Define directory for SCM repositories
+<Directory ${trac_repositories_path}/>
+</Directory>
+
+# Notice that we match all the requests excepts the ones listed in regexp
 <LocationMatch "^/(?!htdocs/.+)(?!dav/.+)(?!svn/.+)(?!git/.+)(?!hg/.+)(?!terms/.+)(?!images/.+)(?!robots\.txt)">
     SetHandler mod_python
     PythonInterpreter main_interpreter
@@ -11,27 +28,34 @@
     Allow from all
 </LocationMatch>
 
-# ----------------------------------------------------------------------------------------------------------------------
 #  Limit the size of picture uploaded (user image)
-# ----------------------------------------------------------------------------------------------------------------------
 <LocationMatch "/prefs/image">
     ErrorDocument 413 /home/prefs/image?limitexceeded=1
     LimitRequestBody 500000
 </LocationMatch>
 
-# ----------------------------------------------------------------------------------------------------------------------
 #  Limit the size user image (creating a new user)
-# ----------------------------------------------------------------------------------------------------------------------
 <LocationMatch "/admin/users">
     ErrorDocument 413 /home/admin/users/edit?limitexceeded=1
     LimitRequestBody 500000
 </LocationMatch>
 
+# RPC
+<LocationMatch "/login/rpc">
+    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.basic_auth
+    PythonOption realm "MultiProject RPC"
+</LocationMatch>
+
 # ----------------------------------------------------------------------------------------------------------------------
+# SVN
+# ----------------------------------------------------------------------------------------------------------------------
+<LocationMatch "^/svn/.+">
+    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.svn
+</LocationMatch>
+
 #  Subversion needs it's own setting for repository path
 #   - Using svn DAV module
 #   - Allow indexes and symbolic links
-# ----------------------------------------------------------------------------------------------------------------------
 <Location /svn>
     DAV svn
     SVNParentPath ${trac_repositories_path}
@@ -39,46 +63,46 @@
 </Location>
 
 # ----------------------------------------------------------------------------------------------------------------------
-#  Allow execution of CGI scripts for git and mercurial
+# Git
 # ----------------------------------------------------------------------------------------------------------------------
-<LocationMatch "^/(git|hg)/.+">
-    Options +ExecCGI
+<LocationMatch "^/git/.+">
+    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.git
+    <Limit PROPFIND>
+        Deny from all
+        Order deny,allow
+    </Limit>
 </LocationMatch>
 
-# ----------------------------------------------------------------------------------------------------------------------
-#  Projects DAV directories uses DAV
-# ----------------------------------------------------------------------------------------------------------------------
-<Location /dav>
-    DAV On
-</Location>
-
-# ----------------------------------------------------------------------------------------------------------------------
-# Define directory for SCM repositories
-# ----------------------------------------------------------------------------------------------------------------------
-<Directory ${trac_repositories_path}/>
-</Directory>
-
-# ----------------------------------------------------------------------------------------------------------------------
-# GIT through git-http-backend
-# ----------------------------------------------------------------------------------------------------------------------
+# git-http-backend
 SetEnv GIT_HTTP_EXPORT_ALL
 SetEnv GIT_PROJECT_ROOT ${trac_repositories_path}
 
-# ----------------------------------------------------------------------------------------------------------------------
 # Set up git-http-backend, first two lines sets up direct apache object delivery
-# ----------------------------------------------------------------------------------------------------------------------
 AliasMatch ^/git/(.*/objects/[0-9a-f]{2}/[0-9a-f]{38})$ ${trac_repositories_path}/$1
 AliasMatch ^/git/(.*/objects/pack/pack-[0-9a-f]{40}.(pack|idx))$ ${trac_repositories_path}/$1
 ScriptAliasMatch "^/git(/.+?)(\.git)?/(.*)?" ${git_core_path}/git-http-backend/$1/$3
 
 # ----------------------------------------------------------------------------------------------------------------------
-# Mercurial settings
+# Mercurial
 # ----------------------------------------------------------------------------------------------------------------------
 ScriptAlias /hg/ ${hgweb_path}/hgwebdir.cgi/
 
+<LocationMatch "^/hg/.+">
+    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.hg
+</LocationMatch>
+
+#  Allow execution of CGI scripts for git and mercurial
+<LocationMatch "^/(git|hg)/.+">
+    Options +ExecCGI
+</LocationMatch>
+
 # ----------------------------------------------------------------------------------------------------------------------
-# WEBDAV settings
+# WebDAV
 # ----------------------------------------------------------------------------------------------------------------------
+<Location /dav>
+    DAV On
+</Location>
+
 Alias /dav/ ${trac_webdav_path}/
 <Directory ${trac_webdav_path}>
     # Prevent HTML content being rendered in browser (CSRF)
@@ -93,6 +117,20 @@ Alias /dav/ ${trac_webdav_path}/
     LimitXMLRequestBody 0
     Options +Indexes
 </Directory>
+
+# Prevent access for root
+<LocationMatch "^/dav/">
+    Order deny,allow
+    Deny from all
+</LocationMatch>
+
+# Allow access for subfolders (overrides the root match rule)
+<LocationMatch "^/dav/.+">
+    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.webdav
+    PythonCleanupHandler multiproject.core.auth.mod_python_access.webdav
+    PythonOption realm "MultiProject webdav"
+    Allow from all
+</LocationMatch>
 
 # ----------------------------------------------------------------------------------------------------------------------
 # Static resources from themeing
