--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ tests/webtests/tests.ini
 tests/perf/smoke-test.xml*
 tests/perf/smoke-bench.xml*
 tests/perf/MultiprojectTestCase.conf
+
+#Test logs
+log.html
+output.xml
+report.html
