Fix HTTP response splitting (#1714)

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -187,6 +187,10 @@ CustomLog ${sys_logs_path}/access.log combined
     # SSL engine settings
     SSLEngine on
 
+    # Prevent HTTP response splitting
+    RewriteEngine on
+    RewriteRule (\r|\n) - [F,L]
+
     # Prevent clickjacking
     Header always append X-Frame-Options SAMEORIGIN
 
@@ -226,6 +230,7 @@ CustomLog ${sys_logs_path}/access.log combined
     DocumentRoot ${trac_htdocs}
 		# Redirect http traffic to https
     RewriteEngine On
+    RewriteRule (\r|\n) - [F,L]
     RewriteCond %{HTTPS} off
     RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 </VirtualHost>
