Prevent flowplayer from loading external stuff (Ticket #1728)

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -191,6 +191,11 @@ CustomLog ${sys_logs_path}/access.log combined
     RewriteEngine on
     RewriteRule (\r|\n) - [F,L]
 
+    # Prevent flowplayer from loading external (potentially evil) stuff
+    RewriteCond %{REQUEST_URI} .*chrome/movie/swf/flowplayer.*
+    RewriteCond %{QUERY_STRING} .*http../.*
+    RewriteRule - [F,L]
+
     # Prevent clickjacking
     Header always append X-Frame-Options SAMEORIGIN
 
@@ -228,9 +233,17 @@ CustomLog ${sys_logs_path}/access.log combined
     ServerName ${domain_name}
     # Apache root directory
     DocumentRoot ${trac_htdocs}
-		# Redirect http traffic to https
+
+    # Prevent HTTP Response Splitting
     RewriteEngine On
     RewriteRule (\r|\n) - [F,L]
+
+    # Prevent flowplayer from loading external (potentially evil) stuff
+    RewriteCond %{REQUEST_URI} .*chrome/movie/swf/flowplayer.*
+    RewriteCond %{QUERY_STRING} .*http../.*
+    RewriteRule - [F,L]
+
+    # HTTP -> HTTPS redirect
     RewriteCond %{HTTPS} off
     RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 </VirtualHost>
