Added project-specific Apache template, and commands to use it.

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -1,18 +1,3 @@
-# ----------------------------------------------------------------------------------------------------------------------
-# Set basic settings for SCM and DAV
-# ----------------------------------------------------------------------------------------------------------------------
-<LocationMatch "^/(git|hg|dav|svn)/.+">
-    SetHandler None
-    PythonOption auth_anonymous true
-    Order allow,deny
-    Allow from all
-</LocationMatch>
-
-# SCM
-<LocationMatch "^/(git|hg|svn)/.+">
-    PythonOption realm "MultiProject version control"
-</LocationMatch>
-
 # Define directory for SCM repositories
 <Directory ${trac_repositories_path}/>
 </Directory>
@@ -46,61 +31,28 @@
     PythonOption realm "MultiProject RPC"
 </LocationMatch>
 
-# ----------------------------------------------------------------------------------------------------------------------
-# SVN
-# ----------------------------------------------------------------------------------------------------------------------
-<LocationMatch "^/svn/.+">
-    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.svn
-</LocationMatch>
-
-#  Subversion needs it's own setting for repository path
-#   - Using svn DAV module
-#   - Allow indexes and symbolic links
-<Location /svn>
-    DAV svn
-    SVNParentPath ${trac_repositories_path}
-    Options +Indexes +FollowSymLinks
-</Location>
+Include ${trac_conf_path}/projects/*.conf
 
 # ----------------------------------------------------------------------------------------------------------------------
 # Git
 # ----------------------------------------------------------------------------------------------------------------------
-<LocationMatch "^/git/.+">
-    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.git
-    <Limit PROPFIND>
-        Deny from all
-        Order deny,allow
-    </Limit>
-</LocationMatch>
-
-# git-http-backend
-SetEnv GIT_HTTP_EXPORT_ALL
-SetEnv GIT_PROJECT_ROOT ${trac_repositories_path}
-
 # Set up git-http-backend, first two lines sets up direct apache object delivery
-AliasMatch ^/git/(.*/objects/[0-9a-f]{2}/[0-9a-f]{38})$ ${trac_repositories_path}/$1
-AliasMatch ^/git/(.*/objects/pack/pack-[0-9a-f]{40}.(pack|idx))$ ${trac_repositories_path}/$1
-ScriptAliasMatch "^/git(/.+?)(\.git)?/(.*)?" ${git_core_path}/git-http-backend/$1/$3
+AliasMatch .*/git/(.*/objects/[0-9a-f]{2}/[0-9a-f]{38})$ ${trac_repositories_path}/$1
+AliasMatch .*/git/(.*/objects/pack/pack-[0-9a-f]{40}.(pack|idx))$ ${trac_repositories_path}/$1
+ScriptAliasMatch ".*/git(/.+?)(\.git)?/(.*)?" ${git_core_path}/git-http-backend/$1/$3
 
 # ----------------------------------------------------------------------------------------------------------------------
 # Mercurial
 # ----------------------------------------------------------------------------------------------------------------------
 ScriptAlias /hg/ ${hgweb_path}/hgwebdir.cgi/
 
-<LocationMatch "^/hg/.+">
-    PythonHeaderParserHandler multiproject.core.auth.mod_python_access.hg
-</LocationMatch>
-
-#  Allow execution of CGI scripts for git and mercurial
-<LocationMatch "^/(git|hg)/.+">
-    Options +ExecCGI
-</LocationMatch>
-
 # ----------------------------------------------------------------------------------------------------------------------
 # WebDAV
 # ----------------------------------------------------------------------------------------------------------------------
 <Location /dav>
     DAV On
+    SetHandler None
+    PythonOption auth_anonymous true
 </Location>
 
 Alias /dav/ ${trac_webdav_path}/
