Beat mercurial into submission.

--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -44,7 +44,7 @@ ScriptAliasMatch ".*/git(/.+?)(\.git)?/(.*)?" ${git_core_path}/git-http-backend/
 # ----------------------------------------------------------------------------------------------------------------------
 # Mercurial
 # ----------------------------------------------------------------------------------------------------------------------
-ScriptAlias /hg/ ${hgweb_path}/hgwebdir.cgi/
+ScriptAliasMatch "(/.*/hg/.*)" ${hgweb_path}/hgwebdir.cgi$1
 
 # ----------------------------------------------------------------------------------------------------------------------
 # WebDAV
