Enabled git & hg in project.ini by default

--- a/etc/templates/trac/project.ini
+++ b/etc/templates/trac/project.ini
@@ -50,8 +50,8 @@ trac.wiki.web_ui.wikimodule = disabled
 tracdiscussion.* = enabled
 tracdownloads.* = disabled
 tracdownloads.core.downloadsdownloads = disabled
-tracext.git.* = disabled
-tracext.hg.* = disabled
+tracext.git.* = enabled
+tracext.hg.* = enabled
 tracrpc.* = enabled
 tracwysiwyg.* = enabled
 childtickets.* = enabled
