ignoring robot reports

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@ tests/webtests/tests.ini
 tests/perf/smoke-test.xml*
 tests/perf/smoke-bench.xml*
 tests/perf/MultiprojectTestCase.conf
-tests/functional/log.html
-tests/functional/output.xml
-tests/functional/report.html
 selenium-screenshot-*.png
 tests/functional/data.csv
+output.xml
+report.html
+log.html
