--- a/etc/templates/httpd/conf.d/multiproject.conf
+++ b/etc/templates/httpd/conf.d/multiproject.conf
@@ -58,7 +58,9 @@ ScriptAliasMatch "(/.*/hg/.*)" ${hgweb_path}/hgwebdir.cgi$1
 Alias /dav/ ${trac_webdav_path}/
 <Directory ${trac_webdav_path}>
     # Prevent HTML content being rendered in browser (CSRF)
-    Header set Content-Disposition attachment
+    <FilesMatch "\.(?i:html|htm|xhtml|xht)$">
+        Header set Content-Disposition attachment
+    </FilesMatch>
 
     DAVMinTimeout 600
     # This directive specifies the number of bytes from 0 (meaning unlimited) to 2147483647 (2GB) that are allowed in a request body.
